[package]
name = "redis-lua-derive"
version = "0.1.0"
authors = ["YushiOMOTE <yushiomote@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
mktemp = "0.4"
selene-lib = "0.4"
full_moon = "0.4.0-rc.12"
toml = "0.5"
proc-macro2 = "1.0"
proc-macro-hack = "0.5"
itertools = "0.8"