[package]
name = "redis-lua-macro"
version = "0.2.0"
authors = ["YushiOMOTE <yushiomote@gmail.com>"]
edition = "2018"
keywords = ["redis", "database"]
description = "Macro component of Redis Lua scripting helper"
homepage = "https://github.com/yushiomote/redis-lua"
repository = "https://github.com/yushiomote/redis-lua"
documentation = "https://docs.rs/redis-lua"
license = "BSD-3-Clause"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
mktemp = "0.4"
selene-lib = { version = "0.5.2", default-features = false }
full_moon = "0.4.0-rc.12"
toml = "0.5"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
proc-macro-hack = "0.5"
proc-macro-error = "1.0"
itertools = "0.8"
regex = "1.3"

[build-dependencies]
rustc_version = "0.2"
