[package]
name = "redis-lua"
version = "0.2.0"
authors = ["YushiOMOTE <yushiomote@gmail.com>"]
edition = "2018"
keywords = ["redis", "database"]
description = "Redis Lua scripting helper"
homepage = "https://github.com/yushiomote/redis-lua"
repository = "https://github.com/yushiomote/redis-lua"
documentation = "https://docs.rs/redis-lua"
license = "BSD-3-Clause"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.14"
redis-lua-macro = { path = "../redis-lua-macro" }
proc-macro-hack = "0.5"
redis = { version = "0.15", features = ["tokio-rt-core"] }
futures = "0.3"
serde_bytes = "0.11"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
