[package]
name = "redis-lua"
version = "0.3.0"
authors = ["YushiOMOTE <yushiomote@gmail.com>"]
edition = "2018"
keywords = ["redis", "database"]
description = "Redis Lua scripting helper"
homepage = "https://github.com/yushiomote/redis-lua"
repository = "https://github.com/yushiomote/redis-lua"
documentation = "https://docs.rs/redis-lua"
license = "BSD-3-Clause"
readme = "../README.md"

[dependencies]
serde = "1.0"
rmp = "0.8"
proc-macro-hack = "0.5"
redis = "0.16"
futures = "0.3"
async-trait = "0.1"
redis-lua-macro = { version = "0.3", path = "../redis-lua-macro" }

[dev-dependencies]
rmp-serde = "0.14"
redis = { version = "0.16", features = ["tokio-rt-core"] }
tokio = { version = "0.2", features = ["full"] }

[build-dependencies]
rustc_version = "0.2"
